--- a/galary.html
+++ b/galary.html
@@ -10,7 +10,7 @@
 <body>
     <div class="food4">
        
-        <img src="70.jpg" alt="" width="1300" height="1400">
+        <img src="../images/70.jpg" alt="" width="1300" height="1400">
     
 </body>
 </html>
