--- a/restaurant.html
+++ b/restaurant.html
@@ -10,9 +10,9 @@
 <body>
     <div class="food3">
        
-            <img src="66.jpg" alt="" width="400" height="600">
-            <img src="67.jpg" alt="" width="400" height="600">
-            <img src="68.jpg" alt="" width="400" height="600">
+            <img src="../images/66.jpg" alt="" width="400" height="600">
+            <img src="../images/67.jpg" alt="" width="400" height="600">
+            <img src="../images/68.jpg" alt="" width="400" height="600">
              
         </div>
 
