--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="menu-icon">
             <input type="checkbox">
-            <div class="menu-line">
+            <div class="menu-lines">
 
             </div>
         </div>
@@ -41,6 +41,7 @@
                 <img src="images/img_3.png" alt="">
             </div>
         </div>
+        
     </header>
     <script src="scripts/site.js"></script>
 </body>
